AC_INIT(src)

PROGRAM=diffusion
VERSION=1.0
SUBDIRS="src data"

AM_INIT_AUTOMAKE(diffusion,1.0)

#AC_PROG_LIBTOOL

#AC_PROG_CC
#AC_PROG_CPP
#AC_PROG_MAKE_SET
#AC_PROG_LN_S

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(PROGRAM)
AC_SUBST(VERSION)
AC_SUBST(SUBDIRS)

AC_CONFIG_SUBDIRS(src data)

AC_OUTPUT(Makefile)

