include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(utils)
add_subdirectory(sed)
add_subdirectory(avulsion)
add_subdirectory(bing)
add_subdirectory(bio)
add_subdirectory(compact)
add_subdirectory(diffusion)
add_subdirectory(failure)
add_subdirectory(flow)
add_subdirectory(inflow)
add_subdirectory(muds)
add_subdirectory(plume)
add_subdirectory(quake)
add_subdirectory(sakura)
add_subdirectory(squall)
add_subdirectory(subside)
add_subdirectory(xshore)
add_subdirectory(sedflux)
add_subdirectory(sedutils)
