AC_INIT(src)

PROGRAM=flow
VERSION=1.0
SUBDIRS="src mfiles"

AM_INIT_AUTOMAKE(flow,1.0)

#AC_PROG_LIBTOOL

#AC_PROG_CC
#AC_PROG_CPP
#AC_PROG_MAKE_SET
#AC_PROG_LN_S

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(PROGRAM)
AC_SUBST(VERSION)
AC_SUBST(SUBDIRS)

AC_CONFIG_SUBDIRS(src mfiles)

AC_OUTPUT(Makefile)

