SUBDIRS = @SUBDIRS@
#SHELL = @KSH@

#TAR = /usr/local/gnu/bin/tar

#DEMO_FILES = ./Eel/hydro.Eel.in ./Eel/hydro.in ./Klinaklini/hydro.Klinaklini.in ./Klinaklini/hydro.in

#dist-hook:
#	mkdir $(distdir)/mfiles
#	mkdir $(distdir)/demo
#	mkdir $(distdir)/demo/Eel
#	mkdir $(distdir)/demo/Klinaklini
#	cp -p $(srcdir)/mfiles/* $(distdir)/mfiles
#	for file in $(DEMO_FILES) ; do \
#	   cp -p $(srcdir)/demo/$$file $(distdir)/demo/$$file; \
#	done

