AC_INIT(src)

PROGRAM=plume
VERSION=2.0
SUBDIRS="demo mfiles src"

AM_INIT_AUTOMAKE(plume,2.0)

AC_MSG_CHECKING(if plume centerline will be used)
AC_ARG_ENABLE(centerline, \
   [--enable-centerline     Use plume centerline for deposition rates], \
   AC_DEFINE(USE_CENTERLINE), \
   enable_centerline=no)
AC_MSG_RESULT($enable_centerline)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_MAKE_SET
AC_PROG_LN_S

AC_SUBST(PROGRAM)
AC_SUBST(VERSION)
AC_SUBST(SUBDIRS)

AC_CONFIG_SUBDIRS(demo mfiles src)

AC_OUTPUT(Makefile)

