SUBDIRS = @SUBDIRS@

TAR = /usr/local/gnu/bin/tar

DEMO_FILES = vail.bathy vail.inline vail.plume vail.sealevel vail.sediment vail.tectonics vail.userl

#dist-hook:
##	mkdir $(distdir)/mfiles
#	mkdir $(distdir)/demo
#	mkdir $(distdir)/demo/vail
##	cp -p $(srcdir)/mfiles/* $(distdir)/mfiles/*
#	for file in $(DEMO_FILES) ; do \
#	   cp -p $(srcdir)/demo/vail/$$file $(distdir)/demo/vail; \
#	done

