builtin(include, acsed.m4)dnl

AC_INIT(bing.c)

PROGRAM=bing
VERSION=1.0

AC_PREREQ(2.13)

AM_INIT_AUTOMAKE(bing,1.0)

AC_PROG_LIBTOOL

AC_PROG_CC
AC_PROG_CPP
AC_PROG_MAKE_SET
AC_PROG_LN_S

AM_PROG_CC_STDC

AC_PROG_RANLIB
AC_CHECK_LIB(m, main)

AC_SUBST(PROGRAM)
AC_SUBST(VERSION)
AC_SUBST(SHELL)
AC_SUBST(CPPFLAGS)
AC_SUBST(LIBS)

#SED_LIB_GLIB(1,2,8)
SED_LIB_SED(0,14,0)

AC_OUTPUT(Makefile)

