builtin(include, acsed.m4)dnl

AC_INIT(compact.c)

PROGRAM=compact
VERSION=1.0

AM_INIT_AUTOMAKE(compact,1.0)

AC_PROG_LIBTOOL

AC_PROG_CC
AC_PROG_CPP
AC_PROG_MAKE_SET
AC_PROG_LN_S

AM_PROG_CC_STDC

SED_LIB_GLIB(2,6,0)
SED_LIB_SED(0,14,0)

AC_PROG_RANLIB

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LIBS)
AC_SUBST(PROGRAM)
AC_SUBST(VERSION)

AC_OUTPUT(Makefile)

